--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,3 +1,22 @@
 label{
 	color:white;
 }
+
+.gear { position: relative; display: block; margin-bottom: 25px; padding-bottom: 15px; border-bottom: 1px solid #d9d9d9; }
+
+.gear a.editlink { position: absolute; right: 0; top: 13px; }
+
+.datainfo { margin-left: 10px; font-size: 11px; color: white; }
+
+label { display: inline-block; font-weight: bold; color: white; font-size: 12px; width: 100px; }
+
+/** @group form inputs **/
+.hlite { background: #e2e8f6; border: 1px solid #bdc7d8; width: 250px; margin-left: -7px; padding: 4px 7px; color: #565656; font-size: 12px; }
+
+/** @group buttons **/
+.savebtn { position: absolute; right: 0; top: 13px; padding: 4px 9px; background: #5972a8; font-size: 1.2em; cursor: pointer; border: 1px solid #1a356e; color: white; -webkit-box-shadow: inset 0 1px 0 #8a9cc2; -moz-box-shadow: inset 0 1px 0 #8a9cc2; box-shadow: inset 0 1px 0 #8a9cc2; margin-bottom: 5px; margin-top: -5px; display: none;
+}
+.savebtn:hover { color: #fff; background: #607db7; text-decoration: none; }
+.savebtn:active { background: #556790; }
+
+
