--- a/src/views/item.jade
+++ b/src/views/item.jade
@@ -46,46 +46,59 @@ body
 						i(class="small material-icons blue-text" id="viewConsignor") add
 					div(class="collapsible-body")
 						each item in items
+							input(value='#{item.id}' name='updateid' hidden)
 							div(class="gear")
 								label(for="lotnumber") Lotnumber
-								span(name="lotnumber")= item.lotnumber
+								span(id="lotnumber" name="lotnumber" class="datainfo")= item.lotnumber
+								
 								a(href="#" class="editlink") Edit Info
 								a(class="savebtn") Save
 
+							div(class="gear")
 								label(for="itemname") Item Name
-								span(name="name")= item.name
+								span(id="name" name="name" class="datainfo")= item.name
+								
 								a(href="#" class="editlink") Edit Info
 								a(class="savebtn") Save
 
+							div(class="gear")
 								label(for="category") Category
-								span(name="category")= item.category
+								span(id="category" name="category" class="datainfo")= item.category
+								
 								a(href="#" class="editlink") Edit Info
 								a(class="savebtn") Save
 
+							div(class="gear")
 								label(for="description") Description
-								span(name="description")= item.description
+								span(id="description" name="description" class="datainfo")= item.description
+								
 								a(href="#" class="editlink") Edit Info
 								a(class="savebtn") Save
 
+							div(class="gear")
 								label(for="estimate") Estimate
-								span(name="estimate")= item.estimate
+								span(id="estimate" name="estimate" class="datainfo")= item.estimate
+								
 								a(href="#" class="editlink") Edit Info
 								a(class="savebtn") Save
 
+							div(class="gear")
 								label(for="reserve") Reserve
-								span(name="reserve")= item.reserve
+								span(id="reserve" name="reserve" class="datainfo")= item.reserve
+								
 								a(href="#" class="editlink") Edit Info
 								a(class="savebtn") Save
 
+							div(class="gear")
 								label(for="premium") Premium
-								span(name="premium")= item.premium
+								span(id="premium" name="premium" class="datainfo")= item.premium
+								
 								a(href="#" class="editlink") Edit Info
 								a(class="savebtn") Save
 
+							div(class="gear")
 								label(for="consignorid") Consignor#Id
-								span(name="consignorId")= item.consignorId
+								span(id="consignorId" name="consignorId" class="datainfo")= item.consignorId
+								
 								a(href="#" class="editlink") Edit Info
 								a(class="savebtn") Save
-
-								.row
-									button(class="btn waves-effect waves-light blue-grey darken-4" type="submit" value='#{item.id}' name='updateid') Update
