--- a/src/views/consignor.jade
+++ b/src/views/consignor.jade
@@ -17,11 +17,9 @@ body
 	.row
 		
 		div(class="blue-grey darken-3 col s6" style="height:100vh")
-			
-			a(class="waves-effect waves-light btn modal-trigger" href="#modal1") Add Consignor
-			div(id="modal1" class="modal")
-				div(class="modal-content")
-					include ./forms/consignorform.jade
+			div(style="margin-top:10px;")
+				button(class="btn waves-effect waves-light blue-grey darken-4" id="addconsignor" style=" float:right") Add Consignor
+				
 			
 			table(class="white-text bordered highlight" id="consignors" cellspacing="0" width="100%")
 				thead
@@ -37,15 +35,12 @@ body
 							td=consignor.firstname +" "+ consignor.lastname
 							td=consignor.city
 							td
-								button(class="btn waves-effect waves-light blue-grey darken-4" type="get" value="get") edit
+								button(class="btn waves-effect waves-light blue-grey darken-4" type="get" value="get" id="editconsignor") edit
 								
 							
 
 		div(class="blue-grey darken-2 col s6" style="height:100vh")
-			ul(class="collapsible" data-collapsible="accordion")
-				li
-					div(class="btn waves-effect waves-light blue-grey darken-4 collapsible-header") Add new consignor
-							i(class="small material-icons blue-text" id="viewConsignor") add
-							
-					div(class="collapsible-body")
-						include ./forms/consignorform.jade
+						
+			include ./forms/consignorform.jade			
+			
+			include ./forms/editconsignorform.jade
