--- a/src/views/forms/editconsignorform.jade
+++ b/src/views/forms/editconsignorform.jade
@@ -1,4 +1,4 @@
-div(id="consignorform" style="display:none")
+div(id="editconsignorform" style="display:none")
     form(action='/consignor' method='post' class='col s12 black-text' style="margin:10px")
         .row(class="col s12")
             input-field(class='col s4')
@@ -51,6 +51,4 @@ div(id="consignorform" style="display:none")
                     label(for="fee") Fee - €
                     input(placeholder="Fee" value="10" name="fee" type="text" class="validate")
         .row
-            button(class="btn waves-effect waves-light blue-grey darken-4" type="submit" value="add" style="width:150px") Add
-           
-        button(class="btn waves-effect waves-light deep-orange darken-4" id="canceladdconsignor" style="width:150px") Cancel
+            button(class="btn waves-effect waves-light blue-grey darken-4" type="submit" value="add") Add
