--- a/src/views/forms/editlotform.jade
+++ b/src/views/forms/editlotform.jade
@@ -1,4 +1,4 @@
-div
+div(id="editlotform" style="display:none")
         div(class="col s1")
             label(for="displayitemid") Item ID
             input(id="displayitemid" name="displayitemid")
