--- a/src/views/item.jade
+++ b/src/views/item.jade
@@ -16,6 +16,9 @@ body
 	.row
 
 		div(class="blue-grey darken-3 col s6" style="height:100vh")
+			div(style="margin-top:10px;")
+				button(class="btn waves-effect waves-light blue-grey darken-4" id="additem" style=" float:right") Add Lots
+			
 			table(class="white-text bordered highlight" id="consignors" cellspacing="0" width="100%")
 				thead
 					tr
@@ -34,71 +37,6 @@ body
 
 		div(class="blue-grey darken-2 col s6" style="height:100vh")
 
-			ul(class="collapsible" data-collapsible="accordion")
-				li
-					div(class="btn waves-effect waves-light blue-grey darken-4 collapsible-header") Add new lot
-						i(class="small material-icons blue-text" id="viewConsignor") add
-					div(class="collapsible-body")
-						include ./forms/lotform.jade
+			include ./forms/lotform.jade
 
-
-			div
-					div(class="col s1")
-						label(for="displayitemid") Item ID
-						input(id="displayitemid" name="displayitemid")
-
-					div(class="col s2")
-						label(for="lotnumber") Lotnumber
-						input(id="lotnumber" name="lotnumber")
-						
-						a(href="#" class="editlink") Edit Info
-						a(class="savebtn") Save
-
-					div(class="gear")
-						label(for="itemname") Item Name
-						span(id="name" name="name" class="datainfo")
-						
-						a(href="#" class="editlink") Edit Info
-						a(class="savebtn") Save
-
-					div(class="gear")
-						label(for="category") Category
-						span(id="category" name="category" class="datainfo")
-						
-						a(href="#" class="editlink") Edit Info
-						a(class="savebtn") Save
-
-					div(class="gear")
-						label(for="description") Description
-						span(id="itemdescription" name="description" class="datainfo")
-						
-						a(href="#" class="editlink") Edit Info
-						a(class="savebtn") Save
-
-					div(class="gear")
-						label(for="estimatelow") Estimate Low
-						span(id="estimatelow" name="estimatelow" class="datainfo")
-						
-						a(href="#" class="editlink") Edit Info
-						a(class="savebtn") Save
-
-					div(class="gear")
-						label(for="estimatehigh") Estimate High
-						span(id="estimatehigh" name="estimatehigh" class="datainfo")
-						
-						a(href="#" class="editlink") Edit Info
-						a(class="savebtn") Save
-
-					div(class="gear")
-						label(for="reserve") Reserve
-						span(id="reserve" name="reserve" class="datainfo")
-						
-						a(href="#" class="editlink") Edit Info
-						a(class="savebtn") Save
-
-					div(class="gear")
-						label(for="consignorId") Consignor#Id
-						span(id="consignorId" name="consignorId" class="datainfo")
-						
-						a(href="#" class="editlink") Edit Info
-						a(class="savebtn") Save
+			include ./forms/editlotform.jade
