--- a/src/views/forms/editconsignorform.jade
+++ b/src/views/forms/editconsignorform.jade
@@ -51,4 +51,4 @@ div(id="editconsignorform" style="display:none")
                     label(for="fee") Fee - €
                     input(placeholder="Fee" value="10" name="fee" type="text" class="validate")
         .row
-            button(class="btn waves-effect waves-light blue-grey darken-4" type="submit" value="add") Add
+            button(class="btn waves-effect waves-light blue-grey darken-4" type="submit" value="save") Save
