--- a/src/views/item.jade
+++ b/src/views/item.jade
@@ -17,7 +17,7 @@ body
 
 		div(class="blue-grey darken-3 col s6" style="height:100vh")
 			div(style="margin-top:10px;")
-				button(class="btn waves-effect waves-light blue-grey darken-4" id="additem" style=" float:right") Add Lots
+				button(class="btn waves-effect waves-light blue-grey darken-4" id="additem" style=" float:right") Add Lot
 			
 			table(class="white-text bordered highlight" id="consignors" cellspacing="0" width="100%")
 				thead
